--- a/demos/app-datagrid-array.html
+++ b/demos/app-datagrid-array.html
@@ -24,33 +24,15 @@
     </head>
     <body>
 
-        <div data-aura-component="header@husky"></div>
-
-        <div data-aura-component="navigation@husky" data-aura-url="/navigation" data-aura-collapse="true"></div>
-
         <div id="content" class="grid">
-
-            <form action="#">
-                <div class="grid-row">
-                    <div class="grid-col-6">
-                        <label for="firstName">First name:</label>
-                        <input id="firstName" type="text" class="form-element"/>
-                    </div>
-                    <div class="grid-col-6">
-                        <label for="lastName">Last name:</label>
-                        <input id="lastName" type="text" class="form-element"/>
-                    </div>
-                </div>
-            </form>
-
+            <div id="datagrid" class="grid-row"></div>
+            <div id="add-row" class="grid-row m-top-30"><span>Add Row</span></div>
         </div>
 
         <script src="../node_modules/sinon/pkg/sinon.js"></script>
         <script src="../bower_components/jquery/jquery.js"></script>
 
-        <!--script data-main="app" src="../dist/husky.js"></script-->
-
-        <script data-main="app" src="../bower_components/requirejs/require.js"></script>
+        <script data-main="app-datagrid-array" src="../bower_components/requirejs/require.js"></script>
 
 
     </body>
